--- a/style.css
+++ b/style.css
@@ -11,3 +11,11 @@
     margin-right: auto;
     width: 50%;
   }
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: black;
+  color: white;
+}
